
	<!-- Authors: -->
		<!-- Enrique Mendez Cabezas 117390080 -->
		<!-- Braslyn Rodriguez Ramirez 402420750 -->
		<!-- Philippe Gairaud Quesada 117290193 -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.eif400.server</groupId>
  <artifactId>Enano</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>Enano</name>
  <url>http://maven.apache.org</url>

  <properties>
      <maven.compiler.release>14</maven.compiler.release>   
  </properties>

<build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
                <release>14</release>
                <compilerArgs>--enable-preview</compilerArgs>
            </configuration>
        </plugin>
        <plugin>
              <artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<id>build-ENano</id>
						<configuration>
							<archive>
								<manifest>
									<mainClass>com.eif400.server.ENano</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<!-- <appendAssemblyId>false</appendAssemblyId> -->
							<finalName>ENano</finalName>
						</configuration>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
					<execution>
						<id>build-EnanoCompiler</id>
						<configuration>
							<archive>
								<manifest>
									<mainClass>com.eif400.server.ENCompiler</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<!-- <appendAssemblyId>false</appendAssemblyId> -->
							<finalName>ENCompiler</finalName>
						</configuration>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>

				</executions>
            </plugin>

    </plugins>
 </build>


  <dependencies>
      <dependency>
        <groupId>javax.servlet</groupId>
        <artifactId>javax.servlet-api</artifactId>
        <version>4.0.1</version>
      </dependency>
      <dependency>
        <groupId>org.nanohttpd</groupId>
        <artifactId>nanohttpd</artifactId>
        <version>2.3.1</version>
      </dependency>
      <dependency>
        <groupId>org.nanohttpd</groupId>
        <artifactId>nanohttpd-nanolets</artifactId>
        <version>2.3.1</version>
      </dependency>
      <dependency>
        <groupId>org.nanohttpd</groupId>
        <artifactId>nanohttpd-websocket</artifactId>
        <version>2.3.1</version>
      </dependency>
      <dependency>
        <groupId>org.nanohttpd</groupId>
        <artifactId>nanohttpd-webserver</artifactId>
        <version>2.3.1</version>
      </dependency>
  </dependencies>

</project>
